hw6task4
